<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.movieappferreira.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_search_movie"
        android:name="com.example.movieappferreira.ui.search.SearchMovieFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.movieappferreira.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>