<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.movieappferreira.ui.peopledetails.PeopleDetailsActivity">

    <ImageView
        android:id="@+id/people_photo"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_people_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/people_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/people_photo"
        app:layout_constraintEnd_toEndOf="@+id/people_photo"
        app:layout_constraintStart_toStartOf="@+id/people_photo" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people_photo">

        <TextView
            android:id="@+id/people_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/people_photo" />
    </ScrollView>

    <TextView
        android:id="@+id/text_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="start"
        android:text="@string/popularity"
        app:layout_constraintBottom_toBottomOf="@+id/people_photo"
        app:layout_constraintStart_toEndOf="@+id/people_photo"
        app:layout_constraintTop_toBottomOf="@+id/text_place_of_birthday" />

    <TextView
        android:id="@+id/people_popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_popularity"
        app:layout_constraintTop_toBottomOf="@+id/text_popularity" />

    <TextView
        android:id="@+id/text_place_of_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/place_of_birth"
        app:layout_constraintStart_toEndOf="@+id/people_photo"
        app:layout_constraintTop_toBottomOf="@id/people_birthday" />

    <TextView
        android:id="@+id/people_place_of_birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_place_of_birthday"
        app:layout_constraintTop_toBottomOf="@+id/text_place_of_birthday" />

    <TextView
        android:id="@+id/text_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="start"
        android:text="@string/birthday"
        app:layout_constraintBottom_toTopOf="@+id/text_place_of_birthday"
        app:layout_constraintStart_toEndOf="@+id/people_photo"
        app:layout_constraintTop_toTopOf="@+id/people_photo"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/people_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_birthday"
        app:layout_constraintTop_toBottomOf="@+id/text_birthday" />

    <include
        android:id="@+id/connection_off"
        layout="@layout/activity_wifi_off"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>